# nes-emulator

./: Cargo.toml
m6502/: Cargo.toml
m6502/src/: bus.rs  execution.rs  instructions.rs  lib.rs  opcode_table.rs  stack.rs  status.rs
macroquad-frontend/: Cargo.toml
macroquad-frontend/src/: harness.rs  main.rs  snake.rs
snake-game/: Cargo.toml
snake-game/src/: lib.rs
src/: main.rs
src/gui/: egui_main.rs  mod.rs
src/m6502/: addressing_modes.rs  bus.rs  execution.rs  instructions.rs  mod.rs  opcode_table.rs  status.rs
tools/: generate_instructions.py  generate_opcode_table_entries.py  instructions.txt
